Centralized API logging
